rename in manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "format_version": 1,
   "header": {
-    "name": "boilerplate ui",
+    "name": "boilerplate",
     "description": "a simple boilerplate ui",
     "uuid": "b1930c1b-dda1-433a-83f0-948670cd198b",
     "version": [
